2008-08-25 Duane Ellis 

	* jim.c, jim.h: name value pair and formatting fixes
	
2008-07-23 Uwe Klein <uklein@klein-messgeraete.de>

	* fix missing vararg.h in some files ( included in jim.h )
	* in aio.socket return an error when hosti resolution fails
	   instead of just carrying on.

2008-07-23 oharboe

	* jim.c: reduce stack usage. Important for embedded devices without
	MMU.	
	* jim.c, jim-aio.c, jim-eventloop.c, jim-eventloop.h: emergency repairs
	to make code compile with eCos after event loops was added. event loop
	stuff compiles under eCos at least, but this was not tested for regressions. 

2008-07-21 oharboe

	* src/jim.c: very slightly improved error messages.
	* FreeBSD license cleanup wip

2008-07-13 Uwe Klein <uklein@klein-messgeraete.de>
	
	* doc/jim_man.txt : an overlook over jim command basics
	   and the added commands. incomplete, additions welcome.

2008-07-13 Uwe Klein <uklein@klein-messgeraete.de>

	* signals ( not complete , no eventscripts yet ) sleep and usleep
	   [pit] point in time and [jpit] julian point in time.
	
2008-07-13 Uwe Klein <uklein@klein-messgeraete.de>

	* This adds open async, fileevents and sockets ( tcp server, client ) 
	  to jim-aio, using fileevents requires the jim-eventloop package .

2008-07-13 Uwe Klein <uklein@klein-messgeraete.de>

	* jim.c: in Jim_SubstObj in the switch for tokentype 
	  case: JIM_TT_DICTSUGAR and
	  accompanying code was missing.

2008-07-07 Uwe Klein <uklein@klein-messgeraete.de>

	* changes to jim-eventloop.[ch]
	* fix negative displacement in timeout computation for select
	* add basic support for the fileevent stuff [ used from jim-aio ]
	* add basic support for signal handling / actions 
	* add basic support for timer [via after] restart, cancel 
	   and returning the remaining time for cancled events

2008-07-07 oharboe

	* src/jim.c: remove bogus return value from if {[expr]} {xx} when
	{xx} is not run. 
	
2008-07-07 Duane Ellis <openocd@duaneellis.com>
