@@ -1,3 +1,8 @@
+2008-08-31 Duane Ellis
+
+	* jim.c, jim.h: more text formatting fixes, improved error messages
+	with location of error
+	 
 2008-08-25 Duane Ellis 
 
 	* jim.c, jim.h: name value pair and formatting fixes
